# lightdm-remote-session-freerdp2

./: .build.yml  .bzrignore  .gitgnore  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  freerdp-session  freerdp-session-wrapper.c  freerdp-session.in  freerdp.desktop.in  freerdp2-session-wrapper.c  freerdp2-session.in  freerdp2.desktop.in  known_hosts2  lightdm-remote-freerdp  lightdm-remote-freerdp2  lightdm-remote-session-freerdp.default  lightdm-remote-session-freerdp.in  lightdm-remote-session-freerdp2.default  lightdm-remote-session-freerdp2.in  socket-sucker.c
debian/: changelog  control  copyright  lightdm-remote-session-freerdp.default  lightdm-remote-session-freerdp2.default  watch
