AC_INIT([lightdm-remote-session-freerdp2], [2.0.0])

AM_INIT_AUTOMAKE([1.11 -Wno-portability])
AM_SILENT_RULES([yes])

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_CC_C_O

###########################
# PAM Module dir
###########################

PAMMODULEDIR="/lib/security"
AC_SUBST(PAMMODULEDIR)


AC_CONFIG_FILES([
  Makefile
])
AC_OUTPUT
